refactor: change feature messages -> notification feat: add feature chat feat: implemented menubar feat: implemented dark mode feat: implemented i18n

--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,7 @@ html, body, div#root {
 ::-webkit-scrollbar-thumb:hover {
   background: rgb(148, 163, 184);
 }
+
+.dark * {
+  color-scheme: dark;
+}
